--- a/src/components/NavigationItem/styles.scss
+++ b/src/components/NavigationItem/styles.scss
@@ -8,7 +8,7 @@
     align-items: center;
     overflow: hidden;
     height: $magicNumber;
-    border-right: 3px solid $c-white;
+    border-right: 1px solid $c-white;
     overflow: hidden;
 
     @media screen and (min-width: $tablet-breakpoint) {
